--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,17 @@
 
 currency.symbol=$
+max.horses=7
 restock.amount=10
+
+# Report messages
+message.inventory=Inventory:
+message.horses=Horses:
+message.payout=Payout:
+message.dispensing=Dispensing:
+
+# Error Messages
+error.message.insufficient.funds=Insufficient Funds:
+error.message.invalid.bet=Invalid Bet:
+error.message.invalid.command=Invalid Command:
+error.message.invalid.horse.number=Invalid Horse Number:
+error.message.no.payout=No Payout:
