--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ restock.amount=10
 # Report messages
 message.inventory=Inventory:
 message.horses=Horses:
+message.no.payout=No Payout:
 message.payout=Payout:
 message.dispensing=Dispensing:
 
@@ -14,4 +15,3 @@ error.message.insufficient.funds=Insufficient Funds:
 error.message.invalid.bet=Invalid Bet:
 error.message.invalid.command=Invalid Command:
 error.message.invalid.horse.number=Invalid Horse Number:
-error.message.no.payout=No Payout:
